feat: report implementado - surefire